--- a/pagergallery/src/main/res/layout/fragment_photo.xml
+++ b/pagergallery/src/main/res/layout/fragment_photo.xml
@@ -5,7 +5,7 @@
     android:id="@+id/shimmerLayoutPhoto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PagerPhotoFragment" >
+    tools:context=".PhotoFragment">
 
     <uk.co.senab.photoview.PhotoView
         android:id="@+id/photoView"
