--- a/pagergallery/src/main/res/navigation/navigation.xml
+++ b/pagergallery/src/main/res/navigation/navigation.xml
@@ -2,21 +2,21 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nabigation"
+    android:id="@+id/navigation"
     app:startDestination="@id/galleryFragment">
 
     <fragment
         android:id="@+id/galleryFragment"
-        android:name="com.example.kotlingallery.GalleryFragment"
+        android:name="com.yett.pagergallery.GalleryFragment"
         android:label="Gallery"
         tools:layout="@layout/fragment_gallery">
         <action
-            android:id="@+id/action_galleryFragment_to_pagerPhotoFragment"
-            app:destination="@id/pagerPhotoFragment" />
+            android:id="@+id/action_galleryFragment_to_photoFragment"
+            app:destination="@id/photoFragment" />
     </fragment>
     <fragment
-        android:id="@+id/pagerPhotoFragment"
-        android:name="com.example.kotlingallery.PagerPhotoFragment"
+        android:id="@+id/photoFragment"
+        android:name="com.yett.pagergallery.PhotoFragment"
         android:label="Photo"
         tools:layout="@layout/fragment_photo" />
 </navigation>
