--- a/pagergallery/src/main/res/navigation/navigation.xml
+++ b/pagergallery/src/main/res/navigation/navigation.xml
@@ -11,12 +11,17 @@
         android:label="Gallery"
         tools:layout="@layout/fragment_gallery">
         <action
-            android:id="@+id/action_galleryFragment_to_photoFragment"
-            app:destination="@id/photoFragment" />
+            android:id="@+id/action_galleryFragment_to_pagerPhotoFragment"
+            app:destination="@id/pagerPhotoFragment" />
     </fragment>
     <fragment
         android:id="@+id/photoFragment"
         android:name="com.yett.pagergallery.PhotoFragment"
         android:label="Photo"
         tools:layout="@layout/fragment_photo" />
+    <fragment
+        android:id="@+id/pagerPhotoFragment"
+        android:name="com.yett.pagergallery.PagerPhotoFragment"
+        android:label="PagerPhoto"
+        tools:layout="@layout/fragment_pager_photo" />
 </navigation>
