完成图片下载的前期工作即实现ViewPager2的左右滑动查看图片的功能，即上一个视频的功能

--- a/gallerydownload/src/main/res/layout/cell_pager_photo.xml
+++ b/gallerydownload/src/main/res/layout/cell_pager_photo.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <uk.co.senab.photoview.PhotoView
-        android:id="@+id/cellPagerPhoto"
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:srcCompat="@tools:sample/avatars" />
