--- a/pagergallerysave/src/main/res/layout/cell_gallery.xml
+++ b/pagergallerysave/src/main/res/layout/cell_gallery.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -31,12 +31,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPager2CellGallery"
+            <ImageView
+                android:id="@+id/imageViewCellGallery"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </androidx.viewpager2.widget.ViewPager2>
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                tools:srcCompat="@tools:sample/avatars" />
         </io.supercharge.shimmerlayout.ShimmerLayout>
 
         <TextView
